--- a/package.json
+++ b/package.json
@@ -1,17 +1,62 @@
 {
   "name": "moonide",
   "version": "1.0.0",
-  "description": "Modern Desktop IDE",
+  "description": "A modern, lightweight code editor built with Electron and Monaco Editor",
   "main": "main.js",
   "scripts": {
-    "sass": "sass style.scss:style.css --watch",
     "start": "electron .",
-    "dev": "concurrently \"npm run sass\" \"electron .\""
+    "sass": "sass style.scss:style.css --watch",
+    "build": "electron-builder",
+    "build:win": "electron-builder --win",
+    "build:mac": "electron-builder --mac",
+    "build:linux": "electron-builder --linux"
   },
+  "build": {
+    "appId": "com.moonide.app",
+    "productName": "MoonIDE",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+    ],
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "build/icon.ico"
+    },
+    "mac": {
+      "target": [
+        "dmg"
+      ],
+      "icon": "build/icon.icns"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "build/icon.png"
+    }
+  },
+  "author": "Your Name",
+  "license": "MIT",
   "devDependencies": {
-    "sass": "^1.69.0",
     "electron": "^28.0.0",
-    "concurrently": "^8.2.2"
+    "electron-builder": "^24.9.1",
+    "sass": "^1.69.5"
   },
   "dependencies": {
     "monaco-editor": "^0.45.0"
